src/app/globals.css
@import "tailwindcss";
@import "@splidejs/react-splide/css";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

:root {
  --background: #ffffff;
  --foreground: #171717;
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@theme {
  --color-dark-gray: #212121;
  --color-hover-gray: #4A4A4A;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
    --color-background: var(--background);
    --color-foreground: var(--foreground);
  }
}

@keyframes shimmer {
  100% {
    transform: translateX(100%);
  }
}
.animate-shimmer {
  animation: shimmer 1.5s infinite;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

.description-html table {
  width: 100%;
  border-collapse: collapse;
  font-size: 0.875rem;
  margin-top: 1rem;
}

.description-html table td,
.description-html table th {
  border: 1px solid #e5e7eb;
  padding: 0.5rem 0.75rem;
  text-align: center;
}

.description-html table tr:first-child td {
  background-color: #f9fafb;
  font-weight: 600;
}

.max-w-container {
  max-width: 1920px;
}

@media (min-width: 798px) {
  .desktop-only {
    display: block;
  }
}

